[package]
name = "slack-summarizer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/CragglesG/slack-summarizer"
homepage = "https://github.com/CragglesG/slack-summarizer"
keywords = ["tool", "cli-tool", "utility"]
categories = ["command-line-utilities"]
description = "lack Summarizer is a handy CLI tool for summarizing recent messages in Slack. It allows you to easily catch up on what's happening without leaving your command line."




[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
termimad = "0.31.0"
